# alfred-yabai-switcher

./: .gitignore  .gitmodules  Makefile  TODO.md
alfredworkflow/: info.plist
yabai-get-windows/: Cargo.toml
yabai-get-windows/src/: app_paths.rs  cache.rs  error.rs  main.rs  utils.rs
