[package]
name = "yabai-get-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
alfred = "4.0.2"
which = "8.0.0"
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
