[package]
name = "yabai-get-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
alfred = "4.0.2"
which = "8.0.0"
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
trait-set = "0.3.0"
humantime = "2.3.0"
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"


